--- a/public/css/try-groonga.css
+++ b/public/css/try-groonga.css
@@ -1,1 +1,14 @@
 /* TODO: Designe me. */
+
+.terminal .terminal-output div div,
+.cmd .prompt
+{
+    line-height: 120%;
+}
+
+.terminal,
+.cmd
+{
+    font-size: 16px;
+    line-height: 120%;
+}
