--- a/public/css/jquery.terminal.css
+++ b/public/css/jquery.terminal.css
@@ -1,63 +1,25 @@
 /*
- *       __ _____                     ________                              __
- *      / // _  /__ __ _____ ___ __ _/__  ___/__ ___ ______ __ __  __ ___  / /
- *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
- * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
- * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
- *           \/              /____/
- * http://terminal.jcubic.pl
+ * This css file is part of jquery terminal
  *
- * Copyright (c) 2011-2014 Jakub Jankiewicz <http://jcubic.pl>
- *
- * This file is part of jQuery Terminal.
- *
- * jQuery Terminal is free software; you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * jQuery Terminal is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with Foobar; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ * Licensed under GNU LGPL Version 3 license
+ * Copyright (c) 2011-2013 Jakub Jankiewicz <http://jcubic.pl>
  *
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd .prompt, .cmd .prompt div, .terminal .terminal-output div div{
     display: inline-block;
 }
-.cmd .mask, .cmd .clipboard {
+.cmd .clipboard {
     position: absolute;
     bottom: 0;
-    height: 16px;
-    left: -10px;
-}
-/* the only way I found to hide textarea on Android */
-.cmd .mask {
-    width: 10px;
-    background: black;
-    z-index: 100;
-}
-.cmd .clipboard {
-    /*
-       clip: rect(0,0,0,0);
-    */
-    /* on desktop textarea appear when paste */
-    /*
+    left: 0;
     opacity: 0.01;
     filter: alpha(opacity = 0.01);
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0.01);
-    */
-    width: 2px; /* textarea need to have width or it will not work on Android */
-    padding: 0;
-    resize: none;
-    border: none;
-    outline: none;
-    background: black; /* work only for desktop so we need to create a mask */
+    width: 2px;
+}
+.cmd > .clipboard {
+    position: fixed;
 }
 .terminal {
     padding: 10px;
@@ -68,7 +30,6 @@
     padding: 0;
     margin: 0;
     height: 1.3em;
-    position: relative;
     /*margin-top: 3px; */
 }
 .cmd .cursor.blink {
@@ -126,8 +87,7 @@
     float: left;
 }
 .terminal, .cmd {
-    font-family: monospace;
-    /*font-family: FreeMono, monospace; this don't work on Android */
+    font-family: FreeMono, monospace;
     color: #aaa;
     background-color: #000;
     font-size: 12px;
